<resources>
    <string name="app_name">Balance Manager</string>
    <string name="app_logo_img">Application logo image</string>
    <string name="menu_icon">Menu icon</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="show_movements">Show movements</string>
    <string name="dashboard">Dashboard</string>
    <string name="_0_00">0,00 €</string>
    <string name="add_btn">Aggiungi</string>
    <string name="default_amount">10.00</string>
    <string name="add_earnings">Add earnings: </string>
    <string name="balance">Balance</string>
    <string name="outgoings">Outgoings</string>
    <string name="earnings">Earnings</string>
    <string name="add_expense">Add expense</string>
    <string name="description">Description</string>
</resources>