<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="550dp">

    <TextView
        android:id="@+id/dialog_outgoings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text="@string/add_expense"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_outgoings_add"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:hint="@string/default_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_outgoings_text" />

    <EditText
        android:id="@+id/dialog_outgoings_description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_outgoings_add" />

    <DatePicker
        android:id="@+id/dialog_outgoings_date"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_outgoings_description" />

</androidx.constraintlayout.widget.ConstraintLayout>